// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component renders a Switch in "on" state 1`] = `
.sx1jh2a {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: background-color 100ms ease;
  width: var(--sx-sizes-4);
}

.sx1jh2a:hover {
  background-color: var(--sx-colors-tonal400);
}

.sx1jh2a[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sx1jh2a[data-state="checked"]:hover {
  background-color: var(--sx-colors-tertiary);
}

.sxxf22o {
  display: block;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  background-color: white;
  border-radius: var(--sx-radii-round);
  transition: transform 100ms;
  will-change: transform;
}

.sxxf22o[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <button
    aria-checked="true"
    class="sx1jh2a"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sxxf22o"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`Switch component renders a disabled switch 1`] = `
.sx1jh2a {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: background-color 100ms ease;
  width: var(--sx-sizes-4);
}

.sx1jh2a:hover {
  background-color: var(--sx-colors-tonal400);
}

.sx1jh2a[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sx1jh2a[data-state="checked"]:hover {
  background-color: var(--sx-colors-tertiary);
}

.sxxf22o {
  display: block;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  background-color: white;
  border-radius: var(--sx-radii-round);
  transition: transform 100ms;
  will-change: transform;
}

.sxxf22o[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <button
    aria-checked="false"
    class="sx1jh2a"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sxxf22o"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component renders a switch 1`] = `
.sx1jh2a {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: background-color 100ms ease;
  width: var(--sx-sizes-4);
}

.sx1jh2a:hover {
  background-color: var(--sx-colors-tonal400);
}

.sx1jh2a[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sx1jh2a[data-state="checked"]:hover {
  background-color: var(--sx-colors-tertiary);
}

.sxxf22o {
  display: block;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  background-color: white;
  border-radius: var(--sx-radii-round);
  transition: transform 100ms;
  will-change: transform;
}

.sxxf22o[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <button
    aria-checked="false"
    class="sx1jh2a"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sxxf22o"
      data-state="unchecked"
    />
  </button>
</div>
`;
